Added missing files

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -3,12 +3,12 @@
   - eyaml
   - yaml
 :yaml:
-  :datadir: "%{settings::manifestdir}/hieradata"
+    :datadir: "%{settings::manifestdir}/hieradata"
 :eyaml:
-  :datadir: "%{settings::manifestdir}/hieradata"
-  :pkcs7_private_key: /etc/puppet/secure/keys/private_key.pkcs7.pem
-  :pkcs7_public_key: /etc/puppet/secure/keys/public_key.pkcs7.pem
-:hierachy:
+    :datadir: "%{settings::manifestdir}/hieradata"
+    :pkcs7_private_key: /etc/puppet/secure/keys/private_key.pkcs7.pem
+    :pkcs7_public_key: /etc/puppet/secure/keys/public_key.pkcs7.pem
+:hierarchy:
   - test
   - "hosts/%{fqdn}"
   - "environments/%{env}"
@@ -16,7 +16,7 @@
   - "systems/%{system_owner}"
   - "databases/%{database}"
   - "databases/%{database_owner}"
-  - "domain/%{domain}"
+  - "domains/%{domain}"
   - "os/%{operatingsystem}/%{operatingsystemrelease}"
   - "os/%{operatingsystem}"
   - "owner/%{os_owner}"
@@ -24,4 +24,4 @@
   - "owner/%{vendor_owner}"
   - common
   
-:merge_behavior: deeper
+:merge_behavior: deeper  
